@@ -18,6 +18,7 @@ API Changes
 - Added IssuesResolvedInReleaseEndpoint
 - Added ReleaseDeploysEndpoint
 - Added OrganizationReleaseCommitsEndpoint
+- Added EventFileCommittersEndpoint
 
 Schema Changes
 ~~~~~~~~~~~~~~
